# pomotention

./: .editorconfig  .env.development  .gitattributes  .gitignore  .pr-body.md  404.html  AGENTS.md  README.md  RELEASE.html  about.html  download.html  faq.html  features.html  get-things-done.html  getting-started.html  hashmap.json  index.html  install.html  package.json  pc-getting-started.html  pnpm-lock.yaml  postgres-langrage-server.jsonc  pwa-getting-started.html  roadmap.html  stats.html  timer.html  tsconfig.json  tsconfig.node.json  vite.config.ts  what-is-pomotention.html  workflow.html
.github/: PULL_REQUEST_TEMPLATE.md
assets/: RELEASE.md.C7fjXXoM.js  RELEASE.md.C7fjXXoM.lean.js  about.md.1WMtOSMp.js  about.md.1WMtOSMp.lean.js  about.md.DubmkTYd.js  about.md.DubmkTYd.lean.js  about.md.yWvBJqmZ.js  about.md.yWvBJqmZ.lean.js  app.8jsahqCz.js  app.B5JQRGN6.js  app.BCNngmKH.js  app.BE-IqCrl.js  app.BF_HHQzh.js  app.BMWE43Yb.js  app.B_MaAdF3.js  app.BlNrkrRI.js  app.BrG9riZn.js  app.By3O1Uu2.js  app.C4qkJS0Q.js  app.C5Yrt8il.js  app.CCv0mZJt.js  app.CDY4ZHRU.js  app.CFvzBJed.js  app.CHv9r68u.js  app.CMSXWj6R.js  app.C_lM5ZLy.js  app.CkANvK9f.js  app.ClrsBrZ0.js  app.D1gx4R1y.js  app.D1i96mLP.js  app.D5f4LdRL.js  app.D6OGzY0D.js  app.DBED7IWY.js  app.DE5com7R.js  app.DVVzXBBw.js  app.DcMUAsd0.js  app.DfK734wJ.js  app.DxNxkGoM.js  app.JYpEq59K.js  (+695 more)
src-tauri/: Cargo.toml  Entitlements.plist  build.rs  tauri.conf.json  tauri.conf.timer.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: cli.rs  lib.rs  main.rs
(+1202 files in other folders)
