[package]
name = "pomotention"
version = "0.3.2"
description = "A focus enhancement software to help you stay present and improve concentration"
authors = ["xeonilian"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "pomotention_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2" 
tauri-plugin-shell = "2.0"
tauri-plugin-cors-fetch = "4.1" 
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"


